# pigpt

./: .env.dist  .gitignore  README.md  devices.dist.json  ngrok.dist.yml  pyproject.toml  slack.dist.yml
pigpt/: utililties.py  web.py
supervisor/: ngrok.conf  pigpt.conf
